# BinaryFileViewer

./: Application.cpp  Application.h  ApplicationManager.cpp  ApplicationManager.h  BinaryFileViewerApplication.cpp  BinaryFileViewerApplication.h  CMakeLists.txt  README.md  main.cpp
Configuration/: BfvConfiguration.cpp  BfvConfiguration.h  IConfiguration.h
Files/: IFile.h
Returns/: ApplicationError.cpp  ApplicationError.h  CStdError.cpp  CStdError.h  ErrorBase.cpp  ErrorBase.h  Expected.h  IError.h  ParseError.cpp  ParseError.h  Status.h
Returns/Exceptions/: ArgParserException.h
Utils/: ArgParser.cpp  ArgParser.h  IApplication.h  SingletonBase.h
Utils/Threads/: DeferredJoinableThread.h  JoinableThread.cpp  JoinableThread.h
